[gd_scene load_steps=2 format=3 uid="uid://bwmd4xvxh7uo5"]

[ext_resource type="Script" uid="uid://cnd17d5fi4iae" path="res://test/noome/levels/level_chooser/chooser.gd" id="1_a31qc"]

[node name="Chooser" type="Node2D"]
script = ExtResource("1_a31qc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.412152, 0.412152, 0.412152, 1)

[node name="Next" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -56.0
offset_right = -10.0
offset_bottom = 56.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = ">"
flat = true

[node name="Previous" type="Button" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -56.0
offset_right = 112.0
offset_bottom = 56.0
grow_vertical = 2
theme_override_font_sizes/font_size = 70
disabled = true
text = "<"
flat = true

[node name="Back" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -542.0
offset_right = 114.0
offset_bottom = -430.0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "< MENU"
flat = true

[connection signal="pressed" from="ColorRect/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="ColorRect/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="ColorRect/Back" to="." method="_on_back_pressed"]
